# Change Log

# Version 0.8.2
* Bug fix in handling error cases when retries > 1

# Version 0.8.1
* Support failover
* Fix corner case bugs when socket becomes undefined

# Version 0.8.0
* Instead of emitting an error on socket timeout, call `error`.

# Version 0.7.2
* Fixed showstopping typo!

# Version 0.7.1
* Properly pass errors to callback on server error

# Version 0.7.0
* Various bug fixes
* Increment and decrement commands

# Version 0.6.0
* Asynchronous response handling

# Version 0.5.1

* Fixed retry logic on errors

# Version 0.5.0

* Better support for concurrent accesses
* Fixed improper ordering of callbacks when there are multiple outstanding requests.
* Request-specific expire (overrides default) in set/add/replace

# Version 0.4.0

* Support for unicode keys, extras and values.
* Extensible logging.

# Version 0.3.1

* Fixed saslAuth to include mechanism (thanks to @shokai)

## Version 0.3.0

* Added `err` parameter to all callbacks from client
* Flush command

