@@ -7,7 +7,7 @@ var fromBuffer = function(headerBuf) {
     opcode:          headerBuf.readUInt8(1),
     keyLength:       headerBuf.readUInt16BE(2),
     extrasLength:    headerBuf.readUInt8(4),
-    dataType:        headerBuf.readUInt8(6),
+    dataType:        headerBuf.readUInt8(5),
     status:          headerBuf.readUInt16BE(6),
     totalBodyLength: headerBuf.readUInt32BE(8),
     opaque:          headerBuf.readUInt32BE(12),
