@@ -2,6 +2,7 @@
 
 # Version 0.8.2
 * Bug fix in handling error cases when retries > 1
+* Bug fix in dataType parse in response header
 
 # Version 0.8.1
 * Support failover
